Fixed up the headers spacings in regards to the edges of the window, fixed the bottom terms/privacy text distancing, also added placeholder pdfs for the privacy and terms footer elements, as well as comments

--- a/stylesheets/header_footer.css
+++ b/stylesheets/header_footer.css
@@ -5,9 +5,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 2rem;
+    padding: 0rem 2rem;
     background-color: #eee6db;
     flex-wrap: wrap;
+    width: 96.9%;
+    transform: translate(-1%, -5%);
 }
 
 .job-logo img {
@@ -57,13 +59,14 @@
   text-align: center;
   box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.1);
   width: 1348px;
-  height: 340px;
+  height: 355px;
   transform: translate(-0.57%,5%);
   align-items: center;
   justify-content: space-evenly;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
 }
+/* footer of footer extra info */
 #footer-copyright {
   margin: 0;
   font-size: 14px;
@@ -80,26 +83,33 @@
   text-decoration: none;
   transition: color 0.3s;
   margin-right: 40px;
+  margin-left: 30px;
 }
 #footer-terms{
   font-size: 14px;
   justify-content: end;
   float: right;
+  color: black;
   text-decoration: none;
   text-align: center;
   margin: 0;
 }
+/* Lists and their items */
 #footer-ul-contacts{
+  color: rgb(121, 94, 21);
   list-style-type: none;
   text-align: center;
   float: left;
   padding-left: 50px;
+  font-size: 20px;
 }
 #footer-ul-page-links {
+  color: rgb(121, 94, 21);
   list-style-type: none;
   text-align: center;
   float: left;
   padding-left: 125px;
+  font-size: 20px;
 }
 #footer-a-page-links {
   color: black;
@@ -108,10 +118,12 @@
   transition: color 0.3s;
 }
 #footer-ul-jump-tos {
+  color: rgb(121, 94, 21);
   list-style-type: none;
   text-align: center;
   float: left;
   padding-left: 125px;
+  font-size: 20px;
 }
 #footer-a-jump-tos {
   color: black;
@@ -128,24 +140,17 @@
 #footer-ul-jump-tos li {
   margin-top: 35px;
   padding: 5px;
-  border: 1px solid black;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
+  font-size: 16px;
 }
 #footer-ul-page-links li {
-  margin-top: 35px;
-  padding: 5px;
-  border: 1px solid black;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
+  margin-top: 42.5px;
+  font-size: 16px;
 }
 #footer-ul-contacts li {
+  color: black;
   margin-top: 35px;
   padding: 5px;
+  font-size: 16px;
 }
 #footer-ul-jump-tos li a:hover {
   color: #3498db;
@@ -167,16 +172,24 @@
   color: #3498db;
   text-decoration: underline;
 }
+/* newsletter */
 #newsletter-title{
-  padding-top: 35px;
+  color: rgb(121, 94, 21);
+  padding-top: 42.4px;
   margin-left: 760px;
+  font-size: 23px;
 }
 #newsletter-fieldset {
+  border-color: black;
   width: 500px;
   height: 125px;
   float: right;
   margin-right: 25px;
   margin-bottom: 100px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
 }
 #newsletter-textarea {
   width: 500px;
